# einsum_prototype

./: pyproject.toml
src/einsum_prototype/: __init__.py  einsum_impl.py
tests/: test_einsum_impl.py
